<resources>
    <string name="app_name">API課題</string>
    <string name="tv_name">名前</string>
    <string name="tv_bio">自己紹介</string>
    <string name="tv_email">メールアドレス</string>
    <string name="tv_password">パスワード</string>
    <string name="tv_password_confirmation">パスワード確認用</string>
    <string name="bt_sign_up">登録</string>
    <string name="tv_signed_up_title">登録完了</string>
    <string name="bt_sign_in">ログイン</string>
    <string name="tv_jump_to_sign_in">新規登録はこちら</string>
    <string name="tv_signed_in_title">ログインされました</string>
    <string name="tab_posts">投稿</string>
    <string name="tab_users">ユーザー</string>
    <string name="tab_chatrooms">チャット</string>
    <string name="tab_profile">マイページ</string>
    <string name="avatar">avatar</string>
</resources>
