<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignedInActivity">

    <TextView
        android:id="@+id/tvSignedInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_signed_in_title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabPosts"
            android:icon="@drawable/posts"
            android:text="@string/tab_posts" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabUsers"
            android:icon="@drawable/users"
            android:text="@string/tab_users" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabChatrooms"
            android:icon="@drawable/chatrooms"
            android:text="@string/tab_chatrooms" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabHome"
            android:icon="@drawable/profile"
            android:text="@string/tab_profile" />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>